# long-novel-agent-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SKILL.md  cli.py  install.py  pyproject.toml  server.py
agents/: openai.yaml
assets/: review-panel.html
docs/: adversarial-verification.md  architecture.md  desktop-agent-workflow.md  github-actions-verify.yml  github-actions-windows-release.yml  installation.md  no-python-handoff.md  system-overview.zh-CN.md  windows-release.md
schemas/: desktop-pack-acceptance-review.schema.json  desktop-pack-agent-startup-prompt.schema.json  desktop-pack-agent-takeover.schema.json  desktop-pack-author-actions.schema.json  desktop-pack-chapter-session.schema.json  desktop-pack-commands-index.schema.json  desktop-pack-commands.schema.json  desktop-pack-diagnostics.schema.json  desktop-pack-evidence-review.schema.json  desktop-pack-evidence-runbook.schema.json  desktop-pack-evidence-session.schema.json  desktop-pack-first-three.schema.json  desktop-pack-handoff-report.schema.json  desktop-pack-index.schema.json  desktop-pack-local-summary.schema.json  desktop-pack-next-step.schema.json  desktop-pack-project-wizard.schema.json  desktop-pack-readiness.schema.json  desktop-pack-results.schema.json  desktop-pack-source-intake.schema.json  desktop-pack-starter-brief.schema.json  desktop-pack-troubleshooting.schema.json  desktop-pack-user-steps.schema.json  desktop-pack-writer-mode-approval.schema.json  proposal.schema.json
scripts/: adversarial_release_check.py  verify_agent_kit.py
(+39 files in other folders)
