[project]
name = "long-novel-agent-kit"
version = "0.7.180"
description = "Local continuity tools for long-form novel writing with desktop agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Long Novel Agent Kit Contributors" }
]
keywords = ["novel", "writing", "mcp", "desktop-agent", "continuity", "agent-tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Text Processing",
  "Topic :: Utilities"
]

[tool.long-novel-agent]
kit-version = "0.7.180"
entrypoint-cli = "cli.py"
entrypoint-mcp = "server.py"
